--- a/deployment/templates/deployment/area_detail.html
+++ b/deployment/templates/deployment/area_detail.html
@@ -1,4 +1,7 @@
-{% extends "profiles/sidebar_deployment.html" %} {% block content %}
+{% extends "profiles/sidebar_deployment.html" %}
+{% load index %}
+
+{% block content %}
 <h1 class="ui header">
     {{k9}}
     <div class="sub header">Team details for {{team_assignment.team}}</div>
@@ -45,20 +48,47 @@
     <th>Search and Rescue</th>
   </tr></thead><tbody>
     <tr>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0</td>
+      <td>{{current_deployed.handlers}}</td>
+      <td>{{current_deployed.EDD}}</td>
+      <td>{{current_deployed.NDD}}</td>
+      <td>{{current_deployed.SAR}}</td>
     </tr>
   </tbody>
 </table>
 
 </div>
 
+<div class="ui tab segment" data-tab="second">
 
-        <div class="ui basic segment">
-            <a href="{% url 'deployment:area_list'%}" class="ui blue button">Back</a>
+    <table id=""tabledata2" class="ui compact celled definition table">
+  <thead class="full-width">
+    <tr>
+      <th></th>
+      <th>Handler</th>
+      <th>K9</th>
+      <th>Capability</th>
+    </tr>
+  </thead>
+  <tbody>
+    {% for team in team %}
+    <tr>
+      <td class="collapsing">
+        <div class="ui checkbox">
+          <input type="checkbox"> <label></label>
         </div>
+      </td>
+      <td>{{team.handler}}</td>
+      <td>{{team.k9}}</td>
+      <td>{{capability|capability:forloop.counter0}}</td>
+    </tr>
+    {% endfor %}
+  </tbody>
+</div>
+
+
+        <!--<div class="ui basic segment">
+            <a href="{% url 'deployment:area_list'%}" class="ui blue button">Back</a>
+        </div>-->
 
 <script type="text/javascript">
 
