--- a/deployment/templates/deployment/add_area.html
+++ b/deployment/templates/deployment/add_area.html
@@ -17,19 +17,9 @@
                         {% endif %}
                         <form class = "ui inverted form" method="POST">
                            {% csrf_token %}
-                           <div class="two fields">
-                             <div class="field">
-                                 <label>Area</label>
-                                     {{form.area}}
-                             </div>
-                             <div class="field">
-                                 <label>City</label>
-                                     {{form.city}}
-                             </div>
-                           </div>
                             <div class="field">
-                                <label>Place</label>
-                                    {{form.place}}
+                                <label>Area</label>
+                                    {{form.name}}
                             </div>
                             <div class="ui inverted right aligned segment" style="padding: 0px;">
                                 <button class = "ui button green" type="submit" >{{actiontype}}</button>
