--- a/training/templates/training/classify_k9_list.html
+++ b/training/templates/training/classify_k9_list.html
@@ -1,4 +1,4 @@
-{% extends "profiles/sidebar_training.html" %}  
+{% extends "profiles/sidebar_training.html" %}
 
 {% block content %}
 <div class="ui inverted segment" style="padding:20px;">
@@ -80,7 +80,7 @@
             <th>Color</th>
             <th>Sex</th>
             <th>Age</th>
-            <th>Traning Level</th>
+            <th>Capability</th>
             <th></th>
         </tr>
     </thead>
@@ -92,10 +92,11 @@
             <td>{{data_ontraining.color}}</td>
             <td >{{data_ontraining.sex}}</td>
             <td>{{data_ontraining.age}}</td>
-            <td>{{data_ontraining.training_level}}</td>
-            <td style="width:140px;">
+            <td>{{data_ontraining.capability}}</td>
+            <td style="width:25%;" class="ui center aligned">
                 <a href="{% url 'training:training_update_form' data_ontraining.id %}" class = "tiny ui blue basic button">Select</a>
-                <a href="{% url 'training:fail_dog' data_ontraining.id %}" onclick="return confirm('Are you sure?')" class = "tiny ui red basic button">Drop</a>
+                <a href="{% url 'training:classify_k9_select' data_ontraining.id %}" class = "tiny ui orange basic button">Reassign</a>
+                <a href="{% url 'training:fail_dog' data_ontraining.id %}" class = "tiny ui red basic button">Drop</a>
             </td>
         </tr>
         {% endfor %}
@@ -125,7 +126,7 @@
             <td>{{data_trained.age}}</td>
             <td>{{data_trained.training_level}}</td>
             <td style="text-align:center;">
-                <a href="{% url 'training:serial_number_form' data_trained.id %}" class = "tiny ui blue basic button">Select</a>
+                <a href="{% url 'training:serial_number_form' data_trained.id %}" class = "tiny ui blue basic button">Assign SN</a>
             </td>
         </tr>
         {% endfor %}
@@ -133,37 +134,36 @@
 </table>
 </div>
 <div class="ui tab segment" data-tab="fifth">
-        <table id="tabledata5" class="ui seven column celled table">
-            <thead>
-                <tr>
-                    <th>Name</th>
-                    <th>Breed</th>
-                    <th>Color</th>
-                    <th>Sex</th>
-                    <th>Age</th>
-                    <th>Training Level</th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for data_adoption in data_adoption %}
-                <tr>
-                    <td>{{data_adoption.name}}</td>
-                    <td >{{data_adoption.breed}}</td>
-                    <td>{{data_adoption.color}}</td>
-                    <td >{{data_adoption.sex}}</td>
-                    <td>{{data_adoption.age}}</td>
-                    <td>{{data_adoption.training_level}}</td>
-                    <td style="text-align:center;">
-                        <a href="{% url 'training:adoption_form' data_adoption.id %}" class = "tiny ui blue basic button">Select</a>
-                    </td>
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
+    <table id="tabledata5" class="ui seven column celled table">
+        <thead>
+            <tr>
+                <th>Name</th>
+                <th>Breed</th>
+                <th>Color</th>
+                <th>Sex</th>
+                <th>Age</th>
+                <th>Training Level</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+            {% for data_adoption in data_adoption %}
+            <tr>
+                <td>{{data_adoption.name}}</td>
+                <td >{{data_adoption.breed}}</td>
+                <td>{{data_adoption.color}}</td>
+                <td >{{data_adoption.sex}}</td>
+                <td>{{data_adoption.age}}</td>
+                <td style="text-align:center;">
+                    <a href="{% url 'training:adoption_form' data_adoption.id %}" class = "tiny ui blue basic button">Select</a>
+                </td>
+            </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+</div>
 <script type="text/javascript">
-        
+
     $(document).ready(function() {
         $('#tabledata1').DataTable();
         $('#tabledata2').DataTable();
@@ -172,6 +172,6 @@
         $('#tabledata5').DataTable();
         $('.menu .item').tab();
     });
-    
+
 </script>
  {% endblock %}
