--- a/inventory/templates/inventory/medicine_add.html
+++ b/inventory/templates/inventory/medicine_add.html
@@ -30,18 +30,22 @@
                                 </div>
                               
 
-                                <div class="three fields">
-                                    <div class="seven wide field">
+                                <div class="four fields">
+                                    <div class="field">
                                         <label>Dose</label>
                                         {{form.dose}}
                                     </div>
-                                    <div class="five wide field">
+                                    <div class="field">
                                         <label>Unit of Measurement</label>
                                         {{form.uom}}
                                     </div>
-                                    <div class="four wide field">
+                                    <div class="field">
                                         <label>Price</label>
                                         {{form.price}}
+                                    </div>
+                                    <div class="field">
+                                        <label>Yearly Used</label>
+                                        {{form.used_yearly}}
                                     </div>
                                 </div>
 
@@ -61,5 +65,26 @@
     </div>                    
 </div>
 
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        $('#tabledata').DataTable();
+        
+        $("input[name='used_yearly']").prop('disabled', true);
+        
+        $("select[name='med_type']").change(function() {
+            if ($("select[name='med_type']").val() == 'Vaccine'){
+                $("input[name='used_yearly']").prop('disabled', false);
+                $("input[name='dose']").val(1).prop('readonly', true);
+                $("select[name='uom']").prop('readonly', true);
+            }else{
+                $("input[name='used_yearly']").prop('disabled', true);
+                $("input[name='dose']").val(0).prop('readonly', false);
+                $("select[name='uom']").prop('readonly', false);
+            }
+        });
+    });
+
+</script>
 
 {% endblock%}
