request, user, and login
di pa tapos login cuz idk

--- a/profiles/templates/profiles/add_personal_info.html
+++ b/profiles/templates/profiles/add_personal_info.html
@@ -6,7 +6,7 @@
     {% endfor %}
 {% endif %}
 
-<div class="ui ordered steps">
+<div class="ui small steps">
   <div class="completed step">
     <div class="content">
       <div class="title">User Information</div>
@@ -25,6 +25,12 @@
       <div class="description">Add education information of the user</div>
     </div>
   </div>
+        <div class="disabled step">
+    <div class="content">
+      <div class="title">Account</div>
+      <div class="description">Add account of the user</div>
+    </div>
+  </div>
 </div>
 
 <div class="ui fluid container">
@@ -35,10 +41,6 @@
             <div class="field">
                 <label>Mobile Number</label>
                 {{form.mobile_number}}
-            </div>
-            <div class="field">
-                <label>Email Address</label>
-                {{form.email_address}}
             </div>
             <div class="field">
                 <label>Telephone Number</label>
