--- a/profiles/templates/profiles/sidebar_adoption.html
+++ b/profiles/templates/profiles/sidebar_adoption.html
@@ -1,8 +1,8 @@
 {% extends "profiles/global-base-ui/sidebar_menu.html" %}
 
 {% block sidebar_module %}
+  <div class="pusher" style="background:white;">
         <div class="ui basic segment">
-
               <div class="ui fluid container">
                     <div class="ui grid">
                         <div class="three wide column">
@@ -21,5 +21,5 @@
                     </div>
               </div>
         </div>
-
+</div>
 {% endblock%}
