--- a/profiles/templates/profiles/sidebar_deployment.html
+++ b/profiles/templates/profiles/sidebar_deployment.html
@@ -21,7 +21,7 @@
                                     <a href="{% url 'deployment:assigned_location_list'%}" class="item">Team Location List View
                                         <i class="list alternate icon"></i>
                                     </a>
-                                    <a href="{% url 'deployment:request_form'%}" class="item">Request Dog Form
+                                    <a href="{% url 'deployment:request_form'%}" class="item">Request K9 Form
                                         <i class="exclamation icon"></i>
                                     </a>
                                     <a href="{% url 'deployment:request_dog_list'%}" class="item">Request List
