--- a/profiles/templates/profiles/sidebar_training.html
+++ b/profiles/templates/profiles/sidebar_training.html
@@ -1,4 +1,4 @@
-{% extends "profiles/global-base-ui/sidebar_menu.html" %}  
+{% extends "profiles/global-base-ui/sidebar_menu.html" %}
 
 {% block sidebar_module %}
     <div class="pusher" style="background:white;">
@@ -11,10 +11,10 @@
                                         <a class="item"> <b>Training Menu</b></a>
                                         <a href="{% url 'training:training_records'%}" class="item">Training Records
                                             <i class="folder open icon"></i>
-                                        </a>  
-                                        <a href="{% url 'training:classify_k9_list'%}" class="item">Classify Dogs
+                                        </a>
+                                        <a href="{% url 'training:classify_k9_list'%}" class="item">Classify K9's
                                             <i class="clipboard check icon"></i>
-                                        </a>  
+                                        </a>
                                     </div>
                         </div>
                         <!>
@@ -38,17 +38,17 @@
                 list-style-type: none;
                 list-style-position: outside;
                 line-height: 1.14285714em;
-              
+
             }
             .submenu:hover{
                 color: black;
             }
             .subdiv{
-                display: flex; 
-                padding: 8px;  
+                display: flex;
+                padding: 8px;
                 flex-wrap: wrap;
                 justify-content: space-between;
             }
-          
+
       </style>
 {% endblock%}
