--- a/training/templates/training/classify_k9_select.html
+++ b/training/templates/training/classify_k9_select.html
@@ -5,7 +5,7 @@
     <h3 class="ui header">Classify {{ title }}</h3>
     {% if messages %}
         {% for message in messages %}
-            <div class={{style}}> {{ message }}</div>
+            <div class='{{style}}'> {{ message }}</div>
         {% endfor %}
     {% endif %}
 </div>
