Fixed Skill Classifier and Graphs (add descriptions in the future)

--- a/profiles/templates/profiles/sidebar_pa.html
+++ b/profiles/templates/profiles/sidebar_pa.html
@@ -23,6 +23,9 @@
                                 <a class="item">Budgeting
                                         <i class="money bill alternate outline icon"></i>
                                 </a>
+                                 <a class="item">Breeding Recommendation
+                                        <i class="money bill alternate outline icon"></i>
+                                </a>
 
                             </div>
                         </div>
