--- a/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
+++ b/planningandacquiring/templates/planningandacquiring/add_K9_parents.html
@@ -1,5 +1,5 @@
 {% extends "profiles/sidebar_pa.html" %} {% block content %}
-{% load index %}
+{% load pa_tags %}
 
 <h2 class="ui header">
  {{Title}}
@@ -63,7 +63,7 @@
 
               {% for radio in form.mother %}
             <tr>
-                <td>  <div class="ui radio checkbox"> {{radio.tag}} </div> </td>
+                <td> {{radio.tag}} </td>
                 <td>{{mothers|name:forloop.counter0 }}</td>
                 <td>{{mothers|breed:forloop.counter0 }}</td>
                 <td>{{mothers|color:forloop.counter0 }}</td>
@@ -91,7 +91,7 @@
 
               {% for radio in form.father %}
             <tr>
-                <td> <div class="ui radio checkbox">{{radio.tag}}</div> </td>
+                <td>{{radio.tag}}</td>
                 <td>{{fathers|name:forloop.counter0 }}</td>
                 <td>{{fathers|breed:forloop.counter0 }}</td>
                 <td>{{fathers|color:forloop.counter0 }}</td>
