--- a/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
+++ b/planningandacquiring/templates/planningandacquiring/add_donated_K9.html
@@ -2,7 +2,7 @@
 
 <h2 class="ui header">
  {{Title}}
-  <div class="sub header">Input K9 donation receiving data here</div>
+  <div class="sub header">Input K9 data here</div>
 </h2>
 
 <div class="ui ordered steps">
@@ -15,8 +15,8 @@
 
   <div class="disabled step">
     <div class="content">
-      <div class="title">Confirm Adoption</div>
-      <div class="description">Verify adoption details</div>
+      <div class="title">Confirm Details</div>
+      <div class="description">Verify details</div>
     </div>
   </div>
 </div>
