--- a/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
+++ b/planningandacquiring/templates/planningandacquiring/confirm_K9_donation.html
@@ -2,21 +2,21 @@
 
 <h2 class="ui header">
  {{Title}}
-  <div class="sub header">Input K9 donation receiving data here</div>
+  <div class="sub header">Input K9 data here</div>
 </h2>
 
 <div class="ui ordered steps">
   <div class="completed step">
     <div class="content">
       <div class="title">K9 Form</div>
-      <div class="description">Provide your received K9 Data</div>
+      <div class="description">Provide your K9 Data</div>
     </div>
   </div>
 
   <div class="active step">
     <div class="content">
-      <div class="title">Confirm Adoption</div>
-      <div class="description">Verify adoption details</div>
+      <div class="title">Confirm Details</div>
+      <div class="description">Verify details</div>
     </div>
   </div>
 </div>
